# MoM-driver

./: .gitignore  AGENTS.md  MoM-driver.md  README.md  debug.py  experiment_plan.md  experimernt_bash.md  lady.md  model_comparision.md  mom_test.py  plan_anchors_100.npy  pyproject.toml  requirements.txt
docs/: TRAINING_NOTE.md
flash-linear-attention/fla/layers/: mom.py
navsim/agents/: abstract_agent.py
navsim/agents/MoM_driver/: mom_agent.py  mom_backbone.py  mom_config.py  mom_features.py  mom_model.py  timm_layers.py  transformer_decoder.py
navsim/agents/Mom_mf/: mom_agent.py  mom_attention_fla_initial.py  mom_backbone.py  (+4 more)
navsim/common/: dataclasses.py  dataloader.py
paper/: MoM_Driver_Appendix_A_Implementation_Details.tex  MoM_Driver_Paper_Architecture.md  appendix_b_cross_attention.tex  appendix_b_cross_attention_compressed.tex
scripts/evaluation/: run_mom_agent_pdm_score_evaluation.sh  run_mom_driver_pdm_score_evaluation.sh  run_rwkv_agent_pdm_score_evaluation.sh  run_transfuser.sh
scripts/submission/: run_rwkv_create_submission_pickle.sh
scripts/training/: run_load_cache.sh  run_load_cache_rwkv.sh  run_load_cache_rwkv_mixed.sh  run_mom_agent_training.sh  run_mom_driver_training.sh  run_rwkv_mf_training.sh  run_rwkv_mixed_training.sh  run_rwkv_tf_training.sh  run_rwkv_training.sh  run_transfuser_mf_training.sh  run_transfuser_training.sh
tools/: clusters_navsim.py  kmeans_navsim.py  visualize_memory_slots.py
tutorial/: cmp_time.py  custom_anchor_cmp.py  custom_time_cmp.py  custom_time_cmp_mom.py  inference_time_cmp.py  pdm_compare_agents.ipynb
(+106 files in other folders)
